--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE HTML>
-<h1>Is it Shipla O'Clock?</h1>
-<p>Click here when it is Shipla O'Clock.</p>
-<button>SHIPLA O'CLOCK</button>
+<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+<script type="text/javascript" src="script.js"></script>
+<body>
+  <h1>Is it Shipla O'Clock?</h1>
+  <p>Click here when it is Shipla O'Clock.</p>
+  <button id="btn">SHIPLA O'CLOCK</button>
+</body>
