--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE HTML>
-<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-<script type="text/javascript" src="script.js"></script>
-<body>
-  <h1>Is it Shipla O'Clock?</h1>
-  <p>Click here when it is Shipla O'Clock.</p>
-  <button id="btn">SHIPLA O'CLOCK</button>
-</body>
+<html>
+  <head>
+    <link href='https://fonts.googleapis.com/css?family=Lora|Open+Sans' rel='stylesheet' type='text/css'>
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <style type="text/css">
+      h1 {
+        font-family: 'Open Sans';
+      }
+      p,button {
+        font-family: 'Lora';
+        font-size: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Is it Shipla O'Clock?</h1>
+    <p>Click here when it is Shipla O'Clock.</p>
+    <button id="btn">SHIPLA O'CLOCK</button>
+  </body>
+</html>
