--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     </style>
   </head>
   <body>
-    <h1>Is it Shipla O'Clock?</h1>
-    <p>Click here when it is Shipla O'Clock.</p>
-    <button id="btn">SHIPLA O'CLOCK</button>
+    <h1>Is it Maximum Lmao?</h1>
+    <button id="btn">MAXIMUM L M A O</button>
   </body>
 </html>
