--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <body>
     <h1>Is it Maximum Lmao?</h1>
     <button id="btn">MAXIMUM L M A O</button>
+    <a href="/view/">View</a>
   </body>
 </html>
