Replace placeholder text with real text

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </style>
   </head>
   <body>
-    <h1>Is it Maximum Lmao?</h1>
-    <button id="btn">MAXIMUM L M A O</button>
+    <h1>Is it Shebly O'Clock?</h1>
+    <button id="btn">Yes it is!</button>
     <a href="/view/">View</a>
   </body>
 </html>
