Fix relative link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   <body>
     <h1>Is it Shebly O'Clock?</h1>
     <button id="btn">Yes it is!</button>
-    <a href="/view/">View</a>
+    <a href="./view/">View</a>
   </body>
 </html>
